--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Commit and Push changes
         run: |
           git add README.md
-          git commit -m "📣 Announcements Anime"
+          git commit -m "📣 Announcements Anime `date +"%D %T"`"
           git remote set-url origin https://github.com/${{ github.repository }}.git
           git push
 
